<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestedCarDetailsActivity">

    <TextView
        android:id="@+id/carNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/car_number_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/carNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/car_number"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/carNumberLabel"
        app:layout_constraintStart_toEndOf="@+id/carNumberLabel" />

    <TextView
        android:id="@+id/carNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/car_name_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carNumberLabel" />

    <TextView
        android:id="@+id/carName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_name"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/carNameLabel"
        app:layout_constraintStart_toStartOf="@+id/carNumber" />

    <TextView
        android:id="@+id/carCapacityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/car_capacity_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carNameLabel" />

    <TextView
        android:id="@+id/carCapacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_capacity"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/carCapacityLabel"
        app:layout_constraintStart_toStartOf="@+id/carNumber" />

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_date_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carCapacityLabel" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/startDateLabel"
        app:layout_constraintStart_toStartOf="@+id/carNumber" />

    <TextView
        android:id="@+id/startTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_time_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateLabel" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/startTimeLabel"
        app:layout_constraintStart_toStartOf="@+id/carNumber" />

    <TextView
        android:id="@+id/endDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/end_date_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeLabel" />

    <TextView
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/endDateLabel"
        app:layout_constraintStart_toStartOf="@+id/carNumber" />

    <TextView
        android:id="@+id/endTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/end_time_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateLabel" />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/endTimeLabel"
        app:layout_constraintStart_toStartOf="@+id/carNumber" />

    <TextView
        android:id="@+id/numOfRidersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_riders_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeLabel" />

    <TextView
        android:id="@+id/numOfRiders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_riders"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/numOfRidersLabel"
        app:layout_constraintStart_toStartOf="@+id/carNumber" />

    <TextView
        android:id="@+id/totalPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_price_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfRidersLabel" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalPriceLabel"
        app:layout_constraintStart_toStartOf="@+id/carNumber" />


    <Switch
        android:id="@+id/gpsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:text="@string/gpsSwitchText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalPriceLabel"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/siriusxmSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/sirisuxmSwitchText"
        app:layout_constraintBaseline_toBaselineOf="@+id/gpsSwitch"
        app:layout_constraintStart_toEndOf="@+id/gpsSwitch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/onstarSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/onstarSwitchText"
        app:layout_constraintBaseline_toBaselineOf="@+id/siriusxmSwitch"
        app:layout_constraintStart_toEndOf="@+id/siriusxmSwitch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btnRequestCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_request_car_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpsSwitch" />


</androidx.constraintlayout.widget.ConstraintLayout>