<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listitems"
    android:layout_width="match_parent"
    android:layout_height="175dp">

    <TextView
        android:id="@+id/carname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="Car Name"
        app:layout_constraintBottom_toBottomOf="@+id/carname_textview"
        app:layout_constraintEnd_toStartOf="@+id/carname_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/carname_textview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/carname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/start_date_text"
        app:layout_constraintBottom_toBottomOf="@+id/startdate_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startdate_textview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/starttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:text="@string/start_time_text"
        app:layout_constraintBottom_toBottomOf="@+id/starttime_textview"
        app:layout_constraintEnd_toStartOf="@+id/starttime_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/starttime_textview" />

    <TextView
        android:id="@+id/enddate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/end_date_text"
        app:layout_constraintBottom_toBottomOf="@+id/enddate_textview"
        app:layout_constraintEnd_toStartOf="@+id/enddate_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enddate_textview" />

    <TextView
        android:id="@+id/endtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/end_time_text"
        app:layout_constraintBottom_toBottomOf="@+id/endtime_textview"
        app:layout_constraintEnd_toStartOf="@+id/endtime_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/endtime_textview" />

    <TextView
        android:id="@+id/startdate_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carname_textview" />

    <TextView
        android:id="@+id/starttime_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="235dp"
        android:layout_marginRight="235dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startdate_textview" />

    <TextView
        android:id="@+id/enddate_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="233dp"
        android:layout_marginRight="233dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starttime_textview" />

    <TextView
        android:id="@+id/endtime_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="232dp"
        android:layout_marginRight="232dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enddate_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>